# Daily-Standup-Discord-Bot

./: .dockerignore  .gitignore  Dockerfile  README.md  database.py  docker-compose.yml  main.py  message_parser.py  pyproject.toml  scheduler.py
